snippets/Nemerle.Statechart/Tests/testsuite/positive/guard_overriden_by_no_guard.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

  /// <summary>
  /// Description of PathCover.
  /// </summary>
  [statechart(<#

  name "guard overriden by no guard";
  flags testing;

  state A
  {
    a      => B;
    a [a1] => C; // W: Transition "TransitionAToCBya" is overriden by \[TransitionAToBBya\], due to execute priority rules, because this transitions is always enabled
  }

  state B
  {
  }

  state C // W: State "C" is not used in fsm life history
  {
  }
  #>
  )]
  public class TestFsm
  {
    public a1 : bool {get;set;default true}
  }


module Test
{
  Main() : void
  {
    def fsm = TestFsm();
    def tester = fsm.GetTester();
    tester.ConsoleTestInit();

      // "Starting state machine"
    tester.Initiate(["A"]);
     // testing transition overriden guard
    tester.Test("a", ["A"], ["B"]);
    fsm.Terminate()
  }
}

/*
BEGIN-OUTPUT
EntryA
[A]
Ok
Processing a 'a'
ExitA
EntryB
[B]
Ok
END-OUTPUT
*/ 
