snippets/Nemerle.Statechart/Tests/testsuite/negative/unused_state.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

  /// <summary>
  /// Description of TestFsm.
  /// </summary>
  [statechart(<#

  state A
  {
    a => B;
  }

  state B
  {
    b => A;
  }

  state C // W: State "C" is not used in fsm life history
  {
  }

  #>
  )]
  public class TestFsm
  {
  }


